--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "rest api ",
   "main": "index.js",
   "scripts": {
-    "test": "npm test",
+    "test": "jest --watchAll",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -21,7 +21,9 @@
     "body-parser": "^2.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.13.2",
+    "supertest": "^7.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
