--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^8.13.2",
     "supertest": "^7.1.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
